
#this is the cmakelists file for vector class
cmake_minimum_required( VERSION 2.8 )



# Project name

#project( Vector )
#project( Material )



# Create library 

# 2 requirements

# output library name and File input for library

#add_library( vector STATIC Vector.cpp)
#add_library( material STATIC Material.cpp )



# Create executable

# 2 requirements

# output exe name and Test file

#add_executable( Test vectortest.cpp )
#add_executable( Test Material_Test.cpp )



# For link output and library

#target_link_libraries( Test vector)
#target_link_libraries( Test material )





